--- a/src/shared/styles/index.css
+++ b/src/shared/styles/index.css
@@ -28,6 +28,11 @@
     --radius: 0.75rem;
     --yellow: 47 100% 74%;
     --light-blue: 213 100% 96%;
+    --chart-1: 12 76% 61%;
+    --chart-2: 173 58% 39%;
+    --chart-3: 197 37% 24%;
+    --chart-4: 43 74% 66%;
+    --chart-5: 27 87% 67%;
   }
 
   .dark {
@@ -54,6 +59,11 @@
     --ring: 224.3 76.3% 48%;
     --yellow: 47 100% 74%;
     --light-blue: 213 100% 96%;
+    --chart-1: 220 70% 50%;
+    --chart-2: 160 60% 45%;
+    --chart-3: 30 80% 55%;
+    --chart-4: 280 65% 60%;
+    --chart-5: 340 75% 55%;
   }
 }
 
